--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 
 body {
   margin: 0;
+  overflow: hidden;
 }
 .board {
   background-color: #0C0032;
@@ -28,7 +29,7 @@ body {
 }
 h1{
   position: absolute;
-  top: 0;
+  top: 10px;
   margin: 0;
   width: 100vw;
   text-align: center;
